--- a/MerlionPortal/MerlionPortal-war/web/oes/displayallso.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayallso.xhtml
@@ -3,67 +3,92 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h1>All Order </h1>
-        <h:form id="formMain">  
-            <p:growl id="messages"/>        
-            <p:menubar>
-                <p:menuitem value="HOME" url="oesindexpage.xhtml"/>
-                <p:menuitem value="PRODUCTS" url="displayallproducts.xhtml" />
-                <p:submenu label="QUOTATION" >
-                    <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
-                </p:submenu>
-                <p:submenu label="ORDERS" >
-                    <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                    <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
-                    <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
-                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
-                </p:submenu>
-                <p:submenu label="REPORTS" >
-                </p:submenu>
-            </p:menubar>
-            <br/>
-        </h:form>
-        <h:form>  
-            <p:dataTable id="allso" var="salesorder" value="#{viewSalesOrderManagedBean.salesOrderList}" 
-                         filteredValue="#{viewSalesOrderManagedBean.filteredOrder}"
-                         selectionMode="single" selection="#{viewSalesOrderManagedBean.selectedOrder}" 
-                         rowKey="#{salesorder.productPOId}"
-                         widgetVar="salesOrderTalbe"
-                         emptyMessage="No Order found with given criteria">
-                <p:column  
-                    filterBy="#{salesorder.productPOId}" 
-                    filterMatchMode="exact" headerText="SO Number" >
-                    <h:outputText value="#{salesorder.productPOId}" />
-                </p:column>
-                <p:column  
-                    filterBy="#{salesorder.creatorId}" 
-                    filterMatchMode="exact" headerText="Customer" >
-                    <h:outputText value="#{salesorder.creatorId}" />
-                </p:column>
-                <p:column filterBy="#{viewSalesOrderManagedBean.myOrderStatus(salesorder)}" filterMatchMode="in" headerText="Status">
-                    <f:facet name="filter">
-                        <p:selectCheckboxMenu label="Select" 
-                                              onchange="PF('salesOrderTalbe').filter()" 
-                                              panelStyle="width:150px" scrollHeight="150">
-                            <f:selectItems value="#{viewSalesOrderManagedBean.statusList}" />
-                        </p:selectCheckboxMenu>
-                    </f:facet>
-                    <h:outputText value="#{viewSalesOrderManagedBean.myOrderStatus(salesorder)}" />
-                </p:column>
-                <p:column headerText="Create Date">
-                    <h:outputText value="#{quotation.createDate}" />
-                </p:column>
-            </p:dataTable> 
-            <br></br>
-            <p:commandButton action="#{viewSalesOrderManagedBean.viewOrderDetail()}" value="View Order">
-            </p:commandButton>  
-        </h:form>
-    </h:body>
+
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="Display SO" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+
+            <h:form id="formMain">
+                <p:panelMenu>
+                    <p:submenu label="Home" styleClass="display:block">
+                        <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Product" styleClass="display:block">
+                        <p:menuitem value="Products" url="displayallproducts.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Quotation" styleClass="display:block">
+                        <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                        <p:menuitem value="Order Status" url="displayallso.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Orders" styleClass="display:block">
+                        <p:menuitem value="Create Order" url="pogeneration.xhtml" />
+                        <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                        <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
+                        <p:menuitem value="All Sales Order" url="viewallso.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Reports" styleClass="display:block">
+                        <p:menuitem value="Sales Reports" url="#" />
+                    </p:submenu>
+
+                </p:panelMenu>
+            </h:form>
+        </ui:define>
+
+        <ui:define name="right">
+            <h:form>  
+                <p:dataTable id="allso" var="salesorder" value="#{viewSalesOrderManagedBean.salesOrderList}" 
+                             filteredValue="#{viewSalesOrderManagedBean.filteredOrder}"
+                             selectionMode="single" selection="#{viewSalesOrderManagedBean.selectedOrder}" 
+                             rowKey="#{salesorder.productPOId}"
+                             widgetVar="salesOrderTalbe"
+                             emptyMessage="No Order found with given criteria">
+                    <p:column  
+                        filterBy="#{salesorder.productPOId}" 
+                        filterMatchMode="exact" headerText="SO Number" >
+                        <h:outputText value="#{salesorder.productPOId}" />
+                    </p:column>
+                    <p:column  
+                        filterBy="#{salesorder.creatorId}" 
+                        filterMatchMode="exact" headerText="Customer" >
+                        <h:outputText value="#{salesorder.creatorId}" />
+                    </p:column>
+                    <p:column filterBy="#{viewSalesOrderManagedBean.myOrderStatus(salesorder)}" filterMatchMode="in" headerText="Status">
+                        <f:facet name="filter">
+                            <p:selectCheckboxMenu label="Select" 
+                                                  onchange="PF('salesOrderTalbe').filter()" 
+                                                  panelStyle="width:150px" scrollHeight="150">
+                                <f:selectItems value="#{viewSalesOrderManagedBean.statusList}" />
+                            </p:selectCheckboxMenu>
+                        </f:facet>
+                        <h:outputText value="#{viewSalesOrderManagedBean.myOrderStatus(salesorder)}" />
+                    </p:column>
+                    <p:column headerText="Create Date">
+                        <h:outputText value="#{quotation.createDate}" />
+                    </p:column>
+                </p:dataTable> 
+                <br></br>
+                <p:commandButton action="#{viewSalesOrderManagedBean.viewOrderDetail()}" value="View Order">
+                </p:commandButton>  
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
 
