--- a/MerlionPortal/MerlionPortal-war/web/oes/retrievesavedorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/retrievesavedorder.xhtml
@@ -3,56 +3,81 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <h:head>
-        <title>Saved Order</title>
-    </h:head>
-    <h:body>
-        <h1>Saved Order </h1>
-        <h:form id="formMain">  
-            <p:growl id="messages"/>        
-            <p:menubar>
-                <p:menuitem value="HOME" url="oesindexpage.xhtml"/>
-                <p:menuitem value="PRODUCTS" url="displayallproducts.xhtml" />
-                <p:submenu label="QUOTATION" >
-                    <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
-                </p:submenu>
-                <p:submenu label="ORDERS" >
-                    <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                    <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
-                    <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
-                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
-                </p:submenu>
-                <p:submenu label="REPORTS" >
-                </p:submenu>
-            </p:menubar>
-            <br/>
-        </h:form>
-        <h:form>  
-            <p:dataTable id="allSaved" var="savedOrder" value="#{retrieveSavedOrder.savedOrderList}" selectionMode="single" selection="#{retrieveSavedOrder.selectedOrder}" rowKey="#{savedOrder.productPOId}">
-                <p:column  
-                    filterBy="#{savedOrder.productPOId}" 
-                    filterMatchMode="exact" headerText="Saved Id" >
-                    <h:outputText value="#{savedOrder.productPOId}" />
-                </p:column>
-                <p:column  
-                    filterBy="#{savedOrder.creatorId}" 
-                    filterMatchMode="exact" headerText="Creator" >
-                    <h:outputText value="#{savedOrder.creatorId}" />
-                </p:column>
-                <p:column headerText="Create Date">
-                    <h:outputText value="#{savedOrder.createdDate}" />
-                </p:column>
-            </p:dataTable>
-            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-            <br></br>
-            <br></br>
-            <p:commandButton action="#{retrieveSavedOrder.editOrder()}" value="Continue Generating Purchase Order">
-            </p:commandButton>       
-        </h:form>
-    </h:body>
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="Retrieve Saved Order" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+
+        <ui:define name="left">
+
+            <h:form id="formMain">
+                <p:panelMenu>
+                    <p:submenu label="Home" styleClass="display:block">
+                        <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Product" styleClass="display:block">
+                        <p:menuitem value="Products" url="displayallproducts.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Quotation" styleClass="display:block">
+                        <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Orders" styleClass="display:block">
+                        <p:menuitem value="Create Order" url="pogeneration.xhtml" />
+                        <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                        <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />   
+                        <p:menuitem value="Order Status" url="displayallso.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Reports" styleClass="display:block">
+                        <p:menuitem value="Sales Reports" url="#" />
+                    </p:submenu>
+
+                </p:panelMenu>
+            </h:form>
+        </ui:define>
+
+        <ui:define name="right">
+
+            <h:form>  
+                <p:dataTable id="allSaved" var="savedOrder" value="#{retrieveSavedOrder.savedOrderList}" selectionMode="single" selection="#{retrieveSavedOrder.selectedOrder}" rowKey="#{savedOrder.productPOId}">
+                    <p:column  
+                        filterBy="#{savedOrder.productPOId}" 
+                        filterMatchMode="exact" headerText="Saved Id" >
+                        <h:outputText value="#{savedOrder.productPOId}" />
+                    </p:column>
+                    <p:column  
+                        filterBy="#{savedOrder.creatorId}" 
+                        filterMatchMode="exact" headerText="Creator" >
+                        <h:outputText value="#{savedOrder.creatorId}" />
+                    </p:column>
+                    <p:column headerText="Create Date">
+                        <h:outputText value="#{savedOrder.createdDate}" />
+                    </p:column>
+                </p:dataTable>
+                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+
+                <br></br>
+                <br></br>
+                <p:commandButton action="#{retrieveSavedOrder.editOrder()}" value="Continue Generating Purchase Order">
+                </p:commandButton>       
+            </h:form>
+
+        </ui:define>
+    </ui:composition>
 </html>
 
