--- a/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
@@ -3,88 +3,113 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
-    <h:head>
-        <title>Quotation Information</title>
-    </h:head>
-    <h:body>
-        <h1>Quotation Detail </h1>
-        <h:form id="formMain">  
-            <p:growl id="messages"/>        
-            <p:menubar>
-                <p:menuitem value="HOME" url="oesindexpage.xhtml"/>
-                <p:menuitem value="PRODUCTS" url="displayallproducts.xhtml" />
-                <p:submenu label="QUOTATION" >
-                    <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
-                </p:submenu>
-                <p:submenu label="ORDERS" >
-                    <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                    <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
-                    <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />
-                    <p:menuitem value="Order Status" url="displayallso.xhtml" />
-                </p:submenu>
-                <p:submenu label="REPORTS" >
-                </p:submenu>
-            </p:menubar>
-            <br/>
-        </h:form>
-        <h:form>
-            <p:fieldset legend="Customer Information" style="margin-bottom:20px">
-                <h:panelGrid columns="2" cellpadding="5">
-                    <h:outputText value="Campany Name:"/>
-                    <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
-                    <h:outputText value="Campany Name:"/>
-                    <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
-                    <br></br>
-                    <h:outputText
-                        value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
-                        His beloved son Michael has just come home from the war, but does not intend to become part of his father's business. T
-                        hrough Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect,
-                        but given to ruthless violence whenever anything stands against the good of the family." />
-                </h:panelGrid>
-            </p:fieldset>
-            <f:facet name="header">
-                Quotation Items
-            </f:facet>
-            <p:dataTable var="lineItem" value="#{quotationManagedBean.selectedQuotation.quotationLineItemList}">
-                <p:column headerText="SKU">
-                    <h:outputText value="#{lineItem.productproductId.productId}" />
-                </p:column>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-                <p:column headerText="Name">
-                    <h:outputText value="#{lineItem.productproductId.productName}" />
-                </p:column>
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="Quotation Info" />
 
-                <p:column headerText="Description">
-                    <h:outputText value="#{lineItem.productproductId.description}" />
-                </p:column>
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
 
-                <p:column headerText="Category">
-                    <h:outputText value="#{lineItem.productproductId.category}" />
-                </p:column>
-                <p:column headerText="Price">
-                    <h:outputText value="#{lineItem.lineItemPrice}" />
-                </p:column>
-            </p:dataTable>
-            <br></br>
-            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-            <p:commandButton action="#{quotationManagedBean.goBackToall()}" value="Go Back">
-            </p:commandButton>
-            <br></br>
-            <c:if test="#{quotationManagedBean.checkAcceptable()}">
+        <ui:define name="left">
+
+            <h:form id="formMain">
+                <p:panelMenu>
+                    <p:submenu label="Home" styleClass="display:block">
+                        <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Product" styleClass="display:block">
+                        <p:menuitem value="Products" url="displayallproducts.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Quotation" styleClass="display:block">
+                        <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Orders" styleClass="display:block">
+                        <p:menuitem value="Create Order" url="pogeneration.xhtml" />
+                        <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
+                        <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />   
+                        <p:menuitem value="Order Status" url="displayallso.xhtml" />
+                    </p:submenu>
+
+                    <p:submenu label="Reports" styleClass="display:block">
+                        <p:menuitem value="Sales Reports" url="#" />
+                    </p:submenu>
+
+                </p:panelMenu>
+            </h:form>
+        </ui:define>
+
+        <ui:define name="right">
+
+            <h:form>
+                <p:fieldset legend="Customer Information" style="margin-bottom:20px">
+                    <h:panelGrid columns="2" cellpadding="5">
+                        <h:outputText value="Campany Name:"/>
+                        <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
+                        <h:outputText value="Campany Name:"/>
+                        <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
+                        <br></br>
+                        <h:outputText
+                            value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
+                            His beloved son Michael has just come home from the war, but does not intend to become part of his father's business. T
+                            hrough Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect,
+                            but given to ruthless violence whenever anything stands against the good of the family." />
+                    </h:panelGrid>
+                </p:fieldset>
+                <f:facet name="header">
+                    Quotation Items
+                </f:facet>
+                <p:dataTable var="lineItem" value="#{quotationManagedBean.selectedQuotation.quotationLineItemList}">
+                    <p:column headerText="SKU">
+                        <h:outputText value="#{lineItem.productproductId.productId}" />
+                    </p:column>
+
+                    <p:column headerText="Name">
+                        <h:outputText value="#{lineItem.productproductId.productName}" />
+                    </p:column>
+
+                    <p:column headerText="Description">
+                        <h:outputText value="#{lineItem.productproductId.description}" />
+                    </p:column>
+
+                    <p:column headerText="Category">
+                        <h:outputText value="#{lineItem.productproductId.category}" />
+                    </p:column>
+                    <p:column headerText="Price">
+                        <h:outputText value="#{lineItem.lineItemPrice}" />
+                    </p:column>
+                </p:dataTable>
                 <br></br>
-                <p:commandButton action="#{quotationManagedBean.acceptQuotation()}" value="Accept This Quotation">
+                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                <p:commandButton action="#{quotationManagedBean.goBackToall()}" value="Go Back">
                 </p:commandButton>
-                <p:commandButton action="#{quotationManagedBean.rejectQuotation()}" value="Reject This Quotation">
-                </p:commandButton> 
-            </c:if>
-            <c:if test="#{quotationManagedBean.userId==1}">
-                <p:commandButton action="#{quotationManagedBean.cancelQuotation()}" value="Cancel This Quotation">
-                </p:commandButton> 
-            </c:if>
-        </h:form>
-    </h:body>
+                <br></br>
+                <c:if test="#{quotationManagedBean.checkAcceptable()}">
+                    <br></br>
+                    <p:commandButton action="#{quotationManagedBean.acceptQuotation()}" value="Accept This Quotation">
+                    </p:commandButton>
+                    <p:commandButton action="#{quotationManagedBean.rejectQuotation()}" value="Reject This Quotation">
+                    </p:commandButton> 
+                </c:if>
+                <c:if test="#{quotationManagedBean.userId==1}">
+                    <p:commandButton action="#{quotationManagedBean.cancelQuotation()}" value="Cancel This Quotation">
+                    </p:commandButton> 
+                </c:if>
+            </h:form>
+
+        </ui:define>
+    </ui:composition>
 </html>
 
